--- a/LibraryApp.API/LibraryApp.API.csproj
+++ b/LibraryApp.API/LibraryApp.API.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>LibraryApp.API</RootNamespace>
     <AssemblyName>LibraryApp.API</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -151,7 +151,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53070</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53070/</IISUrl>
+          <IISUrl>http://localhost/library/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
