String connection updated

--- a/LibraryApp.API/Web.config
+++ b/LibraryApp.API/Web.config
@@ -64,7 +64,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="LibraryEntities" connectionString="metadata=res://*/Models.Context.Library.csdl|res://*/Models.Context.Library.ssdl|res://*/Models.Context.Library.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FTINOCOC-PC\SQLEXPRESS;initial catalog=BIBLIOTECA;user id=sa;password=DbAdmin2016;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LibraryEntities" connectionString="metadata=res://*/Models.Context.Library.csdl|res://*/Models.Context.Library.ssdl|res://*/Models.Context.Library.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KGUUEBK\SQLEXPRESS;initial catalog=BIBLIOTECA;user id=sa;password=DbAdmin2019;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
